# kicad-mcp

./: .gitignore  pyproject.toml
scripts/: compile_proto.py
src/kicad_mcp/: connection.py  server.py
src/kicad_mcp/proto/board/: board_commands_pb2.py  board_pb2.py  board_types_pb2.py
src/kicad_mcp/proto/common/: envelope_pb2.py
src/kicad_mcp/proto/common/commands/: base_commands_pb2.py  editor_commands_pb2.py  project_commands_pb2.py
src/kicad_mcp/proto/common/types/: base_types_pb2.py  enums_pb2.py  project_settings_pb2.py
src/kicad_mcp/proto/schematic/: schematic_commands_pb2.py  schematic_types_pb2.py
src/kicad_mcp/tools/: base.py  board.py  document.py  editor.py  items.py  pcb.py  project.py  schematic.py  selection.py  symbol_edit.py  utility.py  wire_edit.py
