[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "kicad-mcp"
version = "0.1.0"
description = "MCP server for KiCad IPC API"
requires-python = ">=3.10"
dependencies = [
    "pynng>=0.8.0",
    "protobuf>=4.0",
    "mcp>=1.0",
    "kiutils>=1.4.0",
]

[project.optional-dependencies]
dev = [
    "grpcio-tools",
]

[project.scripts]
kicad-mcp = "kicad_mcp.server:main"

[tool.setuptools.packages.find]
where = ["src"]
