[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "kicad-mcp"
version = "0.2.0"
description = "MCP server for reading KiCad schematic and PCB files"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0",
    "kiutils>=1.4.0",
]

[project.scripts]
kicad-mcp = "kicad_mcp.server:main"

[tool.setuptools.packages.find]
where = ["src"]
